Game and water scarcity page

--- a/Water scarcity,risk and vulnerablitiy.html
+++ b/Water scarcity,risk and vulnerablitiy.html
@@ -50,65 +50,264 @@
 								<h3>Water Scarcity,Risk and Vulnerability <small>Post on September 10th 2015</small></h3>
 							</div>
                             <img class = "featureImg" src = "img/water-head.jpg" width = "100%">
-                            <p>
-                            	Four voices from four countries united by a single
-								theme: deprivation in access to water. That
-								deprivation can be measured by statistics, but
-								behind the numbers are the human faces of the
-								millions of people denied an opportunity to realize
-								their potential. Water, the stuff of life and a
-								basic human right, is at the heart of a daily crisis
-								faced by countless millions of the world’s most
-								vulnerable people—a crisis that threatens life
-								and destroys livelihoods on a devastating scale.
-								Unlike wars and natural disasters, the
-								global crisis in water does not make media
-								headlines. Nor does it galvanize concerted international
-								action. Like hunger, deprivation
-								in access to water is a silent crisis experienced
-								by the poor and tolerated by those with the resources,
-								the technology and the political power
-								to end it. Yet this is a crisis that is holding back
-								human progress, consigning large segments of
-								humanity to lives of poverty, vulnerability and
-								insecurity. This crisis claims more lives through
-								disease than any war claims through guns. It
-								also reinforces the obscene inequalities in life
-								chances that divide rich and poor nations in
-								an increasingly prosperous and interconnected
-								world and that divide people within countries
-								on the basis of wealth, gender and other markers
-								for disadvantage.
-                            </p>
-                            <h4>Scarcity</h4>
-                            <p>
-                            	“By means of water”, says the Koran, “we give life
-								to everything.” That simple teaching captures a
-								deeper wisdom. People need water as surely as
-								they need oxygen: without it life could not exist.
-								But water also gives life in a far broader sense.
-								People need clean water and sanitation to sustain
-								their health and maintain their dignity. But
-								beyond the household water also sustains ecological
-								systems and provides an input into the
-								production systems that maintain livelihoods.
-								Ultimately, human development is about
-								the realization of potential. It is about what
-								people can do and what they can become—their
-								capabilities—and about the freedom they have
-								to exercise real choices in their lives. Water pervades
-								all aspects of human development. When
-								people are denied access to clean water at home
-								or when they lack access to water as a productive
-								resource their choices and freedoms are
-								constrained by ill health, poverty and vulnerability.
-								Water gives life to everything, including
-								human development and human freedom
-                            </p>
-					</div>
+					        <div class = "jumbotron">
+						       <center>
+							      <h1>"You ain't gonna miss your water until your well runs dry"- Bob Marley</h1>
+							   </center>
+						    </div>
+	                        <p>
+	                        	Human security means having protection against unpredictable events that disrupt
+								lives and livelihoods. Few resources have a more critical bearing on human security
+								than water. As a productive resource, water is essential in maintaining the livelihoods
+								of the world’s most vulnerable people. But water also has destructive properties,
+								as witnessed by storms and floods. Security in access to water as a productive
+								input and protection against the vulnerabilities associated with uncertainty in water
+								flows is one of the keys to human development.
+	                        </p>
+	                        <p>
+	                        	Perceptions of water security today are heavily
+								influenced by ideas about scarcity. Shortages of
+								water are widely perceived as the defining feature
+								of water insecurity. Concerns that the world is
+								“running out of water” are aired with growing
+								frequency. But scarcity is both a distorting and
+								limiting lens for viewing water insecurity. It is
+								distorting because much of what passes for scarcity
+								is a policy-induced consequence of mismanaging
+								water resources. And it is limiting because
+								physical availability is only one dimension of
+								water insecurity.
+	                        </p>
+	                        <h4>Water Scarcity</h4>
+	                        <p>
+	                        	“Water, water everywhere, nor any drop to
+								drink,” laments the sailor in Samuel Coleridge’s
+								Rime of the Ancient Mariner. The observation
+								remains a useful first approximation for understanding
+								the world’s supply of fresh water.
+	                        </p>
+	                        <p>
+	                        	Earth may be the water planet, but 97%
+								of its water is in oceans.5 Most of the remainder
+								is locked in Antarctic icecaps or deep underground,
+								leaving less than 1% available for
+								human use in easily accessible freshwater lakes
+								and rivers. Unlike oil or coal, water is an infinitely
+								renewable resource. In a natural cycle
+								rainwater falls from the clouds, returns to the
+								salty sea through freshwater rivers, and evaporates
+								back to the clouds. The cycle explains
+								why we cannot run out of water, but supply
+								is finite. Planet Earth’s hydrological system
+								pumps and transfers about 44,000 cubic kilometres
+								of water to the land each year, equivalent
+								to 6,900 cubic metres for everyone on the
+								planet. A large part of this flow is accounted for
+								by uncontrollable floodwaters, or water too remote
+								for effective human use. Even so, the world
+								has far more water than the 1,700 cubic metres
+								per person minimum threshold that hydrologists
+								by (admittedly arbitrary) convention treat
+								as the amount needed to grow food, support industries
+								and maintain the environment.
+	                        </p>
+	                        <p>
+	                        	Unfortunately, the international average
+								is a largely irrelevant number. At one level the
+								world’s water is like the world’s wealth. Globally,
+								there is more than enough to go round: the
+								problem is that some countries get a lot more
+								than others. Almost a quarter of the world’s supply
+								of fresh water is in Lake Baikal in sparsely
+								populated Siberia.7 Differences in availability
+								across and within regions further highlight the
+								distribution problem. With 31% of global freshwater
+								resources, Latin America has 12 times
+								more water per person than South Asia. Some
+								places, such as Brazil and Canada, get far more
+								water than they can use; others, such as countries
+								in the Middle East, get much less than
+								they need. Water-stressed Yemen (198 cubic
+								metres per person) is not helped by Canada’s
+								overabundance of fresh water (90,000 cubic
+								metres per person). And water-stressed regions
+								in China and India are not relieved by Iceland’s
+								water availability of more than 300 times the
+								1,700 cubic metre threshold.
+							</p>
+						   <h1>Projected water use and diversions to nonagricultural sectors by region, 2000</h1>
+						   <table class = "table">
+						        <thead>
+								    <tr>
+									   <th>Region</th>
+									   <th>Volume (cubic kilometres)</th>
+									   <th>Share of total(%)</th>
+									</tr>
+								</thead>
+								<tbody>
+								    <tr>
+									   <td>Sub-Saharan Africa</td>
+									   <td>10</td>
+									   <td>6</td>
+									</tr>
+									<tr>
+									   <td>East Asia</td>
+									   <td>101</td>
+									   <td>6</td>
+									</tr>
+								    <tr>
+									   <td>South Aisa</td>
+									   <td>34</td>
+									   <td>3</td>
+									</tr>
+									<tr>
+									   <td>Central Asia and Eastern Europe</td>
+									   <td>156</td>
+									   <td>29</td>
+									</tr>
+									<tr>
+									   <td>Latin America</td>
+									   <td>53</td>
+									   <td>15</td>
+									</tr>
+									<tr>
+									   <td>Middle East and North Africa</td>
+									   <td>24</td>
+									   <td>6</td>
+									</tr>
+									<tr>
+									   <td>OECD</td>
+									   <td>518</td>
+									   <td>93</td>
+									</tr>
+									<tr>
+									   <td>World</td>
+									   <td>897</td>
+									   <td>18</td>
+									</tr>	
+								</tbody>
+								<tfoot>Source: IWMI forthcoming.</tfoot>
+						   </table>
+						   <h1>Projected water use and diversions to nonagricultural sectors by region, 2050</h1>
+						   <table class = "table">
+						        <thead>
+								    <tr>
+									   <th>Region</th>
+									   <th>Volume (cubic kilometres)</th>
+									   <th>Share of total(%)</th>
+									</tr>
+								</thead>
+								<tbody>
+								    <tr>
+									   <td>Sub-Saharan Africa</td>
+									   <td>60</td>
+									   <td>38</td>
+									</tr>
+									<tr>
+									   <td>East Asia</td>
+									   <td>511</td>
+									   <td>35</td>
+									</tr>
+								    <tr>
+									   <td>South Aisa</td>
+									   <td>207</td>
+									   <td>25</td>
+									</tr>
+									<tr>
+									   <td>Central Asia and Eastern Europe</td>
+									   <td>301</td>
+									   <td>49</td>
+									</tr>
+									<tr>
+									   <td>Latin America</td>
+									   <td>270</td>
+									   <td>53</td>
+									</tr>
+									<tr>
+									   <td>Middle East and North Africa</td>
+									   <td>93</td>
+									   <td>28</td>
+									</tr>
+									<tr>
+									   <td>OECD</td>
+									   <td>774</td>
+									   <td>72</td>
+									</tr>
+									<tr>
+									   <td>World</td>
+									   <td>2216</td>
+									   <td>41</td>
+									</tr>	
+								</tbody>
+								<tfoot>Source: IWMI forthcoming.</tfoot>
+						   </table>
+						   <h4>Dealing with risk, vulnerability and uncertainty</h4>
+						   <p>
+							   	The physical availability of water is one dimension
+								of scarcity. But in all countries the relationship
+								between water security and water availability
+								is mediated through the infrastructure and
+								institutions that govern water. Countries vary
+								enormously in their capacity in these areas, with
+								implications for water security. Nowhere are
+								those implications more apparent than in the
+								threat of global warming—a threat that can be
+								addressed only through a strong infrastructure
+								base that facilitates adaptation.
+							</p>
+							<h4>Mitigating risk in rich countries</h4>
+							<p>
+								The sheer scale of water infrastructure investment
+								in rich countries is not widely appreciated.
+								Investments in hydraulic infrastructure have in
+								some cases generated great environmental damage,
+								but they have also supported economic
+								prosperity and social progress.
+							</p>
+							<p>
+								In the United States many of the largest
+								federal investments in history were made to
+								store water, harness it for electricity and curb
+								the potential for floods. By one estimate the
+								US Army Corps of Engineers has spent $200
+								billion since 1920 on flood management and
+								mitigation alone (yielding a benefit of about
+								$700 billion).64 The Tennessee Valley Authority,
+								established in 1933 as part of the New Deal
+								to build dams, hydropower facilities and reservoirs,
+								transformed the Tennessee Valley from
+								a flood-prone, impoverished part of the Dust
+								Bowl, with some of the worst human development
+								indicators in the United States, to an area
+								of agricultural prosperity. The cycle of rural
+								poverty afflicting more than 2 million people in
+								one of the poorest regions of the United States
+								was broken in a generation.
+							</p>
+							<p>
+								Risk mitigation in water management
+								through flood control systems and development
+								of an economic infrastructure has been
+								fundamental to human progress in many rich
+								countries. Nowhere is this more evident than
+								in Japan, where heavy post-war investments in
+								infrastructure supported the rapid development
+								of hydropower, flood control and irrigated agriculture.
+								Until World War II flooding caused
+								by heavy seasonal rains and typhoons had enormously
+								detrimental effects on the Japanese
+								economy, with losses sometimes exceeding 20%
+								of GNI. Since the 1970s the impacts of floods
+								have never exceeded 1% of GNI.66 Most of Japan’s
+								population and 60% of its productive assets
+								are on low-lying plains vulnerable to flooding,
+								but infrastructure and water management
+								have curtailed risk at an average cost of about
+								$9 billion a year.
+							</p>
+					 </div>
 				</div>
 			</div>
-			
 			<div class = "col-lg-3">
 				<div class = "list-group">
 					<a href = "#" class = "list-group-item">
